--- a/requirements.txt
+++ b/requirements.txt
@@ -1,318 +1,4 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-appnope==0.1.4
-asgiref==3.8.1
-astor==0.8.1
-asttokens==3.0.0
-attrs==25.1.0
-blinker==1.9.0
-CacheControl==0.14.2
-cachetools==5.5.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-comm==0.2.2
-cryptography==44.0.0
-cvlib==0.2.7
-debugpy==1.8.11
-decorator==5.1.1
-deprecation==2.1.0
-Django==4.2.5
-django-cors-headers==4.6.0
-djangorestframework==3.15.2
-dnspython==2.7.0
-dotenv==0.9.9
-executing==2.1.0
-fastapi==0.115.6
-filelock==3.16.1
-firebase-admin==6.6.0
-Flask==3.1.0
-Flask-Cors==5.0.0
-frozenlist==1.5.0
-fsspec==2024.12.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-api-core==2.24.0
-google-api-python-client==2.158.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-cloud==0.34.0
-google-cloud-core==2.4.1
-google-cloud-firestore==2.19.0
-google-cloud-storage==2.19.0
-google-cloud-vision==3.9.0
-google-crc32c==1.6.0
-google-genai==0.4.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-gotrue==2.11.4
-gpg==1.24.2
-grpcio==1.69.0
-grpcio-status==1.69.0
-h11==0.14.0
-h2==4.2.0
-h5py==3.12.1
-hpack==4.1.0
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.10
-imageio==2.36.1
-imutils==0.5.4
-ipykernel==6.29.5
-ipython==8.31.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jinja2-cli==0.8.2
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-Markdown==3.7
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-motor==3.7.0
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-narwhals==2.11.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==2.2.2
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.1.0
-platformdirs==4.3.6
-postgrest==0.19.3
-progressbar==2.5
-prompt_toolkit==3.0.48
-propcache==0.3.0
-proto-plus==1.25.0
-protobuf==5.29.3
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.5
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyJWT==2.10.1
-pymongo==4.11.3
-pyobjc==10.3.2
-pyobjc-core==10.3.2
-pyobjc-framework-Accessibility==10.3.2
-pyobjc-framework-Accounts==10.3.2
-pyobjc-framework-AddressBook==10.3.2
-pyobjc-framework-AdServices==10.3.2
-pyobjc-framework-AdSupport==10.3.2
-pyobjc-framework-AppleScriptKit==10.3.2
-pyobjc-framework-AppleScriptObjC==10.3.2
-pyobjc-framework-ApplicationServices==10.3.2
-pyobjc-framework-AppTrackingTransparency==10.3.2
-pyobjc-framework-AudioVideoBridging==10.3.2
-pyobjc-framework-AuthenticationServices==10.3.2
-pyobjc-framework-AutomaticAssessmentConfiguration==10.3.2
-pyobjc-framework-Automator==10.3.2
-pyobjc-framework-AVFoundation==10.3.2
-pyobjc-framework-AVKit==10.3.2
-pyobjc-framework-AVRouting==10.3.2
-pyobjc-framework-BackgroundAssets==10.3.2
-pyobjc-framework-BrowserEngineKit==10.3.2
-pyobjc-framework-BusinessChat==10.3.2
-pyobjc-framework-CalendarStore==10.3.2
-pyobjc-framework-CallKit==10.3.2
-pyobjc-framework-CFNetwork==10.3.2
-pyobjc-framework-Cinematic==10.3.2
-pyobjc-framework-ClassKit==10.3.2
-pyobjc-framework-CloudKit==10.3.2
-pyobjc-framework-Cocoa==10.3.2
-pyobjc-framework-Collaboration==10.3.2
-pyobjc-framework-ColorSync==10.3.2
-pyobjc-framework-Contacts==10.3.2
-pyobjc-framework-ContactsUI==10.3.2
-pyobjc-framework-CoreAudio==10.3.2
-pyobjc-framework-CoreAudioKit==10.3.2
-pyobjc-framework-CoreBluetooth==10.3.2
-pyobjc-framework-CoreData==10.3.2
-pyobjc-framework-CoreHaptics==10.3.2
-pyobjc-framework-CoreLocation==10.3.2
-pyobjc-framework-CoreMedia==10.3.2
-pyobjc-framework-CoreMediaIO==10.3.2
-pyobjc-framework-CoreMIDI==10.3.2
-pyobjc-framework-CoreML==10.3.2
-pyobjc-framework-CoreMotion==10.3.2
-pyobjc-framework-CoreServices==10.3.2
-pyobjc-framework-CoreSpotlight==10.3.2
-pyobjc-framework-CoreText==10.3.2
-pyobjc-framework-CoreWLAN==10.3.2
-pyobjc-framework-CryptoTokenKit==10.3.2
-pyobjc-framework-DataDetection==10.3.2
-pyobjc-framework-DeviceCheck==10.3.2
-pyobjc-framework-DictionaryServices==10.3.2
-pyobjc-framework-DiscRecording==10.3.2
-pyobjc-framework-DiscRecordingUI==10.3.2
-pyobjc-framework-DiskArbitration==10.3.2
-pyobjc-framework-DVDPlayback==10.3.2
-pyobjc-framework-EventKit==10.3.2
-pyobjc-framework-ExceptionHandling==10.3.2
-pyobjc-framework-ExecutionPolicy==10.3.2
-pyobjc-framework-ExtensionKit==10.3.2
-pyobjc-framework-ExternalAccessory==10.3.2
-pyobjc-framework-FileProvider==10.3.2
-pyobjc-framework-FileProviderUI==10.3.2
-pyobjc-framework-FinderSync==10.3.2
-pyobjc-framework-FSEvents==10.3.2
-pyobjc-framework-GameCenter==10.3.2
-pyobjc-framework-GameController==10.3.2
-pyobjc-framework-GameKit==10.3.2
-pyobjc-framework-GameplayKit==10.3.2
-pyobjc-framework-HealthKit==10.3.2
-pyobjc-framework-ImageCaptureCore==10.3.2
-pyobjc-framework-InputMethodKit==10.3.2
-pyobjc-framework-InstallerPlugins==10.3.2
-pyobjc-framework-InstantMessage==10.3.2
-pyobjc-framework-Intents==10.3.2
-pyobjc-framework-IntentsUI==10.3.2
-pyobjc-framework-IOBluetooth==10.3.2
-pyobjc-framework-IOBluetoothUI==10.3.2
-pyobjc-framework-IOSurface==10.3.2
-pyobjc-framework-iTunesLibrary==10.3.2
-pyobjc-framework-KernelManagement==10.3.2
-pyobjc-framework-LatentSemanticMapping==10.3.2
-pyobjc-framework-LaunchServices==10.3.2
-pyobjc-framework-libdispatch==10.3.2
-pyobjc-framework-libxpc==10.3.2
-pyobjc-framework-LinkPresentation==10.3.2
-pyobjc-framework-LocalAuthentication==10.3.2
-pyobjc-framework-LocalAuthenticationEmbeddedUI==10.3.2
-pyobjc-framework-MailKit==10.3.2
-pyobjc-framework-MapKit==10.3.2
-pyobjc-framework-MediaAccessibility==10.3.2
-pyobjc-framework-MediaLibrary==10.3.2
-pyobjc-framework-MediaPlayer==10.3.2
-pyobjc-framework-MediaToolbox==10.3.2
-pyobjc-framework-Metal==10.3.2
-pyobjc-framework-MetalFX==10.3.2
-pyobjc-framework-MetalKit==10.3.2
-pyobjc-framework-MetalPerformanceShaders==10.3.2
-pyobjc-framework-MetalPerformanceShadersGraph==10.3.2
-pyobjc-framework-MetricKit==10.3.2
-pyobjc-framework-MLCompute==10.3.2
-pyobjc-framework-ModelIO==10.3.2
-pyobjc-framework-MultipeerConnectivity==10.3.2
-pyobjc-framework-NaturalLanguage==10.3.2
-pyobjc-framework-NetFS==10.3.2
-pyobjc-framework-Network==10.3.2
-pyobjc-framework-NetworkExtension==10.3.2
-pyobjc-framework-NotificationCenter==10.3.2
-pyobjc-framework-OpenDirectory==10.3.2
-pyobjc-framework-OSAKit==10.3.2
-pyobjc-framework-OSLog==10.3.2
-pyobjc-framework-PassKit==10.3.2
-pyobjc-framework-PencilKit==10.3.2
-pyobjc-framework-PHASE==10.3.2
-pyobjc-framework-Photos==10.3.2
-pyobjc-framework-PhotosUI==10.3.2
-pyobjc-framework-PreferencePanes==10.3.2
-pyobjc-framework-PushKit==10.3.2
-pyobjc-framework-Quartz==10.3.2
-pyobjc-framework-QuickLookThumbnailing==10.3.2
-pyobjc-framework-ReplayKit==10.3.2
-pyobjc-framework-SafariServices==10.3.2
-pyobjc-framework-SafetyKit==10.3.2
-pyobjc-framework-SceneKit==10.3.2
-pyobjc-framework-ScreenCaptureKit==10.3.2
-pyobjc-framework-ScreenSaver==10.3.2
-pyobjc-framework-ScreenTime==10.3.2
-pyobjc-framework-ScriptingBridge==10.3.2
-pyobjc-framework-SearchKit==10.3.2
-pyobjc-framework-Security==10.3.2
-pyobjc-framework-SecurityFoundation==10.3.2
-pyobjc-framework-SecurityInterface==10.3.2
-pyobjc-framework-SensitiveContentAnalysis==10.3.2
-pyobjc-framework-ServiceManagement==10.3.2
-pyobjc-framework-SharedWithYou==10.3.2
-pyobjc-framework-SharedWithYouCore==10.3.2
-pyobjc-framework-ShazamKit==10.3.2
-pyobjc-framework-Social==10.3.2
-pyobjc-framework-SoundAnalysis==10.3.2
-pyobjc-framework-Speech==10.3.2
-pyobjc-framework-SpriteKit==10.3.2
-pyobjc-framework-StoreKit==10.3.2
-pyobjc-framework-Symbols==10.3.2
-pyobjc-framework-SyncServices==10.3.2
-pyobjc-framework-SystemConfiguration==10.3.2
-pyobjc-framework-SystemExtensions==10.3.2
-pyobjc-framework-ThreadNetwork==10.3.2
-pyobjc-framework-UniformTypeIdentifiers==10.3.2
-pyobjc-framework-UserNotifications==10.3.2
-pyobjc-framework-UserNotificationsUI==10.3.2
-pyobjc-framework-VideoSubscriberAccount==10.3.2
-pyobjc-framework-VideoToolbox==10.3.2
-pyobjc-framework-Virtualization==10.3.2
-pyobjc-framework-Vision==10.3.2
-pyobjc-framework-WebKit==10.3.2
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2024.2
-pyzmq==26.2.0
-realtime==2.4.0
-referencing==0.37.0
-requests==2.32.3
-rpds-py==0.28.0
-rsa==4.9
-setuptools==75.8.0
-six==1.16.0
-smmap==5.0.2
-sniffio==1.3.1
-sqlparse==0.5.3
-stack-data==0.6.3
-starlette==0.41.3
-storage3==0.11.3
+pandas==2.3.3
+python-dotenv==1.2.1
+Requests==2.32.5
 streamlit==1.51.0
-StrEnum==0.4.15
-supabase==2.13.0
-supafunc==0.9.3
-sympy==1.13.1
-tenacity==9.1.2
-tensorboard==1.12.2
-tensorflow @ https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.12.0-py3-none-any.whl#sha256=f587dc03b5f0d1e50cca39b7159c9f21ffdec96273dbf5f7619d48c622cb21f2
-termcolor==2.5.0
-toml==0.10.2
-torch==2.7.0.dev20250110
-torchaudio==2.6.0.dev20250110
-torchvision==0.22.0.dev20250110
-tornado==6.4.2
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.0
-wcwidth==0.2.13
-websockets==14.1
-Werkzeug==3.1.3
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.1/libexec/wheel-0.45.1-py3-none-any.whl#sha256=da46333d5dcbde6e20cf7e2f8fff9e9ce76e8c94dc4afd6fb95fc4bc2745fb5e
-yarl==1.18.3
